--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -37,6 +37,12 @@ a {
   color: inherit;
   text-decoration: none;
   cursor: pointer;
+
+  &:hover,
+  &:focus {
+    opacity: 0.8;
+    outline: none;
+  }
 }
 
 ul {
