--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,9 @@ a {
   color: inherit;
   text-decoration: none;
   cursor: pointer; }
+  a:hover, a:focus {
+    opacity: 0.8;
+    outline: none; }
 
 ul {
   padding: 0;
@@ -303,6 +306,11 @@ ul {
   background-color: #ffffff; }
   .page--js {
     overflow: hidden; }
+  .page--login {
+    grid-template-rows: -webkit-min-content 1fr;
+    grid-template-rows: min-content 1fr; }
+    .page--login .modal-login {
+      display: block; }
 
 .header {
   position: relative;
@@ -685,10 +693,7 @@ ul {
 
 .promo {
   position: relative;
-  padding-top: 180px;
-  padding-right: 15px;
-  padding-bottom: 182px;
-  padding-left: 15px;
+  padding: 180px 15px 182px 15px;
   font-family: "Cormorant Garamond", "Times", serif;
   text-align: center;
   color: #ffffff;
@@ -718,9 +723,7 @@ ul {
       background-image: url("../img/bg-promo-tablet@2x.jpg"); } }
   @media (max-width: 767px) {
     .promo {
-      padding-top: 190px;
-      padding-right: 15px;
-      padding-bottom: 190px;
+      padding: 180px 15px;
       background-image: url("../img/bg-promo-mobile.jpg"); } }
   @media (max-width: 767px) and (-webkit-min-device-pixel-ratio: 2), (max-width: 767px) and (min-resolution: 2dppx) {
     .promo {
@@ -1236,9 +1239,8 @@ ul {
 
 .faq__button {
   display: none;
-  width: 100%;
   padding-top: 50px;
-  padding-right: 48px; }
+  padding-right: 47px; }
 
 .accordion--js .faq__item:not(.accordion__tab--open) {
   padding-bottom: 48px; }
@@ -1246,15 +1248,19 @@ ul {
     .accordion--js .faq__item:not(.accordion__tab--open) {
       padding-bottom: 20px; } }
 
-.accordion--js p {
+.accordion--js p,
+.accordion--js .filter__content {
   display: none; }
 
-.accordion__tab--open p {
+.accordion__tab--open p,
+.accordion__tab--open .filter__content {
   display: block; }
 
 .accordion--js .accordion__button {
   position: absolute;
+  width: 100%;
   top: 0;
+  left: 0;
   right: 0;
   bottom: 0;
   display: -webkit-box;
@@ -1269,10 +1275,8 @@ ul {
   background-color: transparent;
   border: none;
   cursor: pointer; }
-  .accordion--js .accordion__button:focus, .accordion--js .accordion__button:hover {
-    background-color: rgba(0, 0, 0, 0.1); }
-  .accordion--js .accordion__button:active {
-    background-color: rgba(0, 0, 0, 0.2); }
+  .accordion--js .accordion__button:hover {
+    background-color: rgba(29, 22, 19, 0.1); }
   @media (max-width: 1023px) {
     .accordion--js .accordion__button {
       padding-right: 52px; } }
@@ -1387,9 +1391,6 @@ ul {
   background-color: #000000; }
 
 .footer__container {
-  width: 85.6%;
-  max-width: 1170px;
-  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1399,13 +1400,15 @@ ul {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
+  width: 85.6%;
+  max-width: 1170px;
+  margin: 0 auto;
   padding: 92px 0; }
   @media (max-width: 1023px) {
     .footer__container {
       width: 100%;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap;
-      padding-top: 50px;
       padding: 48px 163px 54px 45px; } }
   @media (max-width: 767px) {
     .footer__container {
@@ -1534,7 +1537,6 @@ ul {
   .form-footer__container input {
     width: 100%;
     padding: 5px 10px 5px 0;
-    padding-right: 10px;
     font-weight: 500;
     font-size: 14px;
     line-height: 21px;
@@ -1845,23 +1847,25 @@ ul {
     display: block; }
 
 .catalog__container {
-  max-width: 1366px;
-  margin: 0 auto;
-  padding: 80px 98px 76px;
   display: grid;
   grid-template-areas: "filter items";
   grid-template-columns: 21% 1fr;
-  gap: 56px; }
+  gap: 56px;
+  max-width: 1366px;
+  margin: 0 auto;
+  padding: 80px 98px 76px; }
   @media (max-width: 1023px) {
     .catalog__container {
       padding: 50px 45px 78px;
       grid-template-areas: "filter" "items";
       grid-template-columns: 1fr;
       grid-template-rows: -webkit-min-content 1fr;
-      grid-template-rows: min-content 1fr; } }
+      grid-template-rows: min-content 1fr;
+      gap: 52px; } }
   @media (max-width: 767px) {
     .catalog__container {
-      padding: 40px 15px 65px; } }
+      padding: 40px 15px 65px;
+      gap: 37px; } }
 
 .catalog__products {
   grid-area: items;
@@ -1904,34 +1908,101 @@ ul {
       -webkit-box-sizing: border-box;
               box-sizing: border-box;
       border: 1px solid #a87b62;
-      padding: 28px;
+      padding: 26px;
+      font-size: 16px;
       text-align: center;
       background-color: #a87b62;
       color: #ffffff; } }
+  @media (max-width: 767px) {
+    .catalog__filter-button {
+      padding: 21px 20px 23px; } }
 
 @media (max-width: 1023px) {
-  .catalog__filter--nojs .catalog__filter-button {
+  .catalog__filter--nojs {
+    width: 80%;
+    margin: 0 auto; }
+    .catalog__filter--nojs .catalog__filter-button {
+      display: none; }
+    .catalog__filter--nojs .filter__close {
+      display: none; } }
+
+@media (max-width: 1023px) {
+  .catalog__filter-wrapper {
     display: none; } }
 
-.catalog__filter--nojs .filter__head-button {
-  display: none; }
+.catalog__filter--js .catalog__filter-wrapper {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 9999;
+  display: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  max-height: 100vh;
+  overflow: auto;
+  background-color: #ffffff; }
+
+@media (max-width: 1023px) {
+  .page--js .catalog__filter-wrapper {
+    display: block; }
+  .page--js .catalog__form {
+    max-width: 423px;
+    margin: 27px auto 89px 0;
+    -webkit-box-shadow: 0px 5px 32px rgba(219, 213, 208, 0.24);
+            box-shadow: 0px 5px 32px rgba(219, 213, 208, 0.24); } }
+
+@media (max-width: 767px) {
+  .page--js .catalog__form {
+    width: calc(100% - 46px);
+    margin: 65px auto 60px; } }
 
 .filter {
   width: 100%; }
 
 .filter__inner {
+  margin-bottom: 35px;
   border: solid #a87b62;
   border-width: 1px 0 0; }
+  @media (max-width: 1023px) {
+    .filter__inner {
+      position: relative;
+      border: 0; } }
 
 .filter__block {
-  padding: 28px 30px 29px 35px;
+  position: relative;
+  padding: 21px 19px 13px 24px;
   border: solid #a87b62;
   border-width: 0 1px 1px; }
+  .filter__block h3 {
+    margin: 0;
+    padding: 0;
+    padding-bottom: 13px;
+    font-size: 16px; }
+  @media (max-width: 1023px) {
+    .filter__block {
+      padding: 34px 21px 13px 20px;
+      border-width: 0 0 1px 0; }
+      .filter__block h3 {
+        font-size: 18px;
+        line-height: 23px; } }
 
-.filter__block-head {
-  position: relative;
-  padding-bottom: 27px;
-  font-size: 16px; }
+.filter__content {
+  padding: 8px 10px 2px; }
+  @media (max-width: 1023px) {
+    .filter__content {
+      padding: 12px 10px 7px; } }
+
+.filter__head-button {
+  display: none;
+  padding-top: 25px;
+  padding-right: 19px; }
 
 .filter__button {
   display: -webkit-box;
@@ -1964,7 +2035,7 @@ ul {
   @media (max-width: 767px) {
     .filter__button {
       width: calc(100% - 40px);
-      margin: 0 20px; } }
+      margin: 0 31px; } }
 
 .filter__button--white {
   margin-top: 25px;
@@ -1983,9 +2054,36 @@ ul {
 
 .filter__close {
   display: none; }
+  @media (max-width: 1023px) {
+    .filter__close {
+      position: absolute;
+      top: 0;
+      right: 0;
+      display: block;
+      position: absolute;
+      width: 32px;
+      height: 32px;
+      color: #ffffff;
+      background-color: #1d1613;
+      border: none;
+      border-radius: 50%;
+      -webkit-transform: translate(50%, -50%);
+              transform: translate(50%, -50%); }
+      .filter__close:hover, .filter__close:focus {
+        opacity: 0.5; }
+      .filter__close:active {
+        color: #1d1613;
+        background-color: #ffffff; } }
+  @media (max-width: 1023px) and (max-width: 767px) {
+    .filter__close {
+      right: 6px;
+      top: 11px; } }
 
 .filter__item {
-  margin-bottom: 12px; }
+  margin-bottom: 10px; }
+  @media (max-width: 1023px) {
+    .filter__item {
+      margin-bottom: 17px; } }
 
 .filter__checkbox-label {
   font-family: "Poppins", "Arial", sans-serif;
@@ -1994,6 +2092,11 @@ ul {
   padding-left: 25px;
   position: relative;
   cursor: pointer; }
+  @media (max-width: 1023px) {
+    .filter__checkbox-label {
+      font-size: 16px;
+      line-height: 21px;
+      padding-left: 31px; } }
 
 .filter__checkbox-label::before {
   content: "";
@@ -2003,6 +2106,10 @@ ul {
   width: 14px;
   height: 14px;
   border: 1px solid #a87b62; }
+  @media (max-width: 1023px) {
+    .filter__checkbox-label::before {
+      width: 18px;
+      height: 18px; } }
 
 :checked + .filter__checkbox-label::after {
   background: #a87b62;
@@ -2013,6 +2120,10 @@ ul {
   width: 14px;
   height: 14px;
   border: 1px solid #a87b62; }
+  @media (max-width: 1023px) {
+    :checked + .filter__checkbox-label::after {
+      width: 18px;
+      height: 18px; } }
 
 .range {
   position: relative;
@@ -2038,6 +2149,12 @@ ul {
   .range::after {
     width: calc((var(--min) - var(--max)) / var(--diff) * 100%);
     margin-left: calc((var(--max) - var(--min-value)) / var(--diff) * 100%); }
+  @media (max-width: 1023px) {
+    .range {
+      width: 75%; } }
+  @media (max-width: 1023px) {
+    .range {
+      width: 100%; } }
 
 .range input[type="range"] {
   z-index: 1;
@@ -2134,10 +2251,13 @@ ul {
      -moz-column-gap: 30px;
           column-gap: 30px;
   row-gap: 27px; }
+  @media (max-width: 1023px) {
+    .products {
+      row-gap: 25px; } }
   @media (max-width: 767px) {
     .products {
       grid-template-columns: repeat(2, 1fr);
-      row-gap: 10px; } }
+      row-gap: 7px; } }
 
 @media (max-width: 767px) {
   .products__item {
@@ -2145,6 +2265,9 @@ ul {
 
 .products .product-card__description {
   padding: 16px 0; }
+  @media (max-width: 767px) {
+    .products .product-card__description {
+      padding: 18px 0; } }
 
 .paginator {
   display: -webkit-box;
@@ -2156,10 +2279,10 @@ ul {
   padding-top: 59px; }
   @media (max-width: 1023px) {
     .paginator {
-      padding-top: 58px; } }
+      padding-top: 60px; } }
   @media (max-width: 767px) {
     .paginator {
-      padding-top: 37px; } }
+      padding-top: 26px; } }
 
 .paginator__list {
   display: -webkit-box;
@@ -2190,6 +2313,10 @@ ul {
         margin-right: 0; } }
   .paginator__item .current {
     color: #1d1613; }
+
+@media (max-width: 1023px) {
+  .paginator__next {
+    margin-left: 19px; } }
 
 @media (max-width: 767px) {
   .paginator__next {
