--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,31 +1,31 @@
 @import '../../node_modules/swiper/swiper';
-@import "global/fonts.scss";
-@import "global/variables.scss";
-@import "global/mixin.scss";
-@import "global/global.scss";
-@import "global/general.scss";
-@import "blocks/page.scss";
-@import "blocks/header.scss";
-@import "blocks/nav-list.scss";
-@import "blocks/sub-list.scss";
-@import "blocks/user-menu.scss";
-@import "blocks/main.scss";
-@import "blocks/promo.scss";
-@import "blocks/new-in.scss";
-@import "blocks/product-card.scss";
-@import "blocks/blog.scss";
-@import "blocks/post.scss";
-@import "blocks/faq.scss";
-@import "blocks/accordion.scss";
-@import "blocks/gallery.scss";
-@import "blocks/footer.scss";
-@import "blocks/footer-nav.scss";
-@import "blocks/form-footer.scss";
-@import "blocks/footer-social.scss";
-@import "blocks/modal-login.scss";
-@import "blocks/overlay.scss";
-@import "blocks/catalog.scss";
-@import "blocks/filter.scss";
-@import "blocks/range.scss";
-@import "blocks/products.scss";
-@import "blocks/paginator.scss";
+@import 'global/fonts.scss';
+@import 'global/variables.scss';
+@import 'global/mixin.scss';
+@import 'global/global.scss';
+@import 'global/general.scss';
+@import 'blocks/page.scss';
+@import 'blocks/header.scss';
+@import 'blocks/nav-list.scss';
+@import 'blocks/sub-list.scss';
+@import 'blocks/user-menu.scss';
+@import 'blocks/main.scss';
+@import 'blocks/promo.scss';
+@import 'blocks/new-in.scss';
+@import 'blocks/product-card.scss';
+@import 'blocks/blog.scss';
+@import 'blocks/post.scss';
+@import 'blocks/faq.scss';
+@import 'blocks/accordion.scss';
+@import 'blocks/gallery.scss';
+@import 'blocks/footer.scss';
+@import 'blocks/footer-nav.scss';
+@import 'blocks/form-footer.scss';
+@import 'blocks/footer-social.scss';
+@import 'blocks/modal-login.scss';
+@import 'blocks/overlay.scss';
+@import 'blocks/catalog.scss';
+@import 'blocks/filter.scss';
+@import 'blocks/range.scss';
+@import 'blocks/products.scss';
+@import 'blocks/paginator.scss';
