--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -41,3 +41,11 @@
     padding: 53px 15px 45px;
   }
 }
+
+
+// .main--login {
+//   grid-template-rows: min-content 1fr;
+//   & .modal-login {
+//     display: block;
+//   }
+// }
