--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -14,7 +14,7 @@ $text-black: #1d1613;
 // fonts
 
 $poppins: "Poppins", "Arial", sans-serif;
-$cormorant: "Cormorant Garamond", "Times", serif;
+$cormorant: "Cormorant Garamond", "Times New Roman", serif;
 
 // brackpoint
 
