--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -118,7 +118,7 @@
     & .catalog__form {
       max-width: 423px;
       margin: 27px auto 89px 0;
-      box-shadow: 0px 5px 32px rgba(219, 213, 208, 0.24);
+      box-shadow: 0 5px 32px rgba(219, 213, 208, 0.24);
     }
   }
 
