--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -55,7 +55,7 @@
     @media (max-width: $tablet-width) {
       font-size: 34px;
       line-height: 36px;
-      letter-spacing: 0em;
+      letter-spacing: 0;
     }
 
     & span {
