--- a/source/sass/global/mixin.scss
+++ b/source/sass/global/mixin.scss
@@ -10,6 +10,6 @@
   font-size: 34px;
   font-weight: 700;
   line-height: 44px;
-  letter-spacing: 0em;
+  letter-spacing: 0;
   text-align: center;
 }
