--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -93,7 +93,11 @@
     border: 0;
     font-family: inherit;
     font-size: 14px;
-    color: $placeholder-grey;
+    color: $basic-black;
+
+    &::placeholder {
+      color: $placeholder-grey;
+    }
   }
 
   @media (max-width: $desktop-width) {
