--- a/source/sass/blocks/modal-login.scss
+++ b/source/sass/blocks/modal-login.scss
@@ -213,12 +213,16 @@
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 100;
+  max-height: 100vh;
+  overflow: auto;
+  scrollbar-width: none;
 
   &--active {
     display: block;
   }
 
   @media (max-width: $desktop-width) {
-    width: 100%;
+    width: 84%;
+    top: 57%;
   }
 }
