--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -20,7 +20,7 @@
   }
 }
 .products .product-card__description {
-  padding: 16px 0;
+  padding: 21px 0 10px;
 
   @media (max-width: $tablet-width) {
     padding: 18px 0;
