--- a/source/sass/blocks/filter.scss
+++ b/source/sass/blocks/filter.scss
@@ -38,7 +38,7 @@
 }
 
 .filter__content {
-  padding: 8px 10px 2px;
+  padding: 9px 0 2px 8px;
 
   @media (max-width: $desktop-width) {
     padding: 12px 10px 7px;
@@ -160,6 +160,10 @@
     line-height: 21px;
     padding-left: 31px;
   }
+
+  &:hover {
+    color: $basic-brown;
+  }
 }
 
 .filter__checkbox-label::before {
@@ -198,3 +202,4 @@
 .filter__input:focus + label::before {
   transform: scale(1.5);
 }
+
