--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,12 +1,12 @@
 .header {
   position: relative;
-  margin-bottom: 20px;
+  // margin-bottom: 20px;
   min-height: 154px;
 
   &::after {
     content: "";
     position: absolute;
-    bottom: 26%;
+    top: 65%;
     left: 0;
     width: 100%;
     height: 1px;
@@ -29,6 +29,7 @@
 
 .header__container {
   display: flex;
+  flex-direction: column;
   justify-content: flex-start;
   max-width: $desktop;
   width: 100%;
@@ -36,7 +37,7 @@
   margin: 0 auto;
 
   @media (max-width: $desktop-width) {
-    padding: 52px 44px 0;
+    padding: 53px 45px 0;
 
     &::after {
       content: none;
@@ -44,7 +45,7 @@
   }
 
   @media (max-width: $tablet-width) {
-    padding: 38px 15px 50px;
+    padding: 38px 15px 0;
   }
 }
 
@@ -53,7 +54,8 @@
   flex-grow: 1;
 
   @media (max-width: $desktop-width) {
-    padding-bottom: 25px;
+    flex-wrap: wrap;
+    padding-bottom: 23px;
   }
 
   @media (max-width: $tablet-width) {
@@ -62,10 +64,10 @@
 }
 
 .header__logo {
-  margin: -13px auto 50px;
+  margin: -13px auto 0;
 
   @media (max-width: $desktop-width) {
-    margin: -22px auto 9px;
+    margin: -22px auto 0;
   }
 
   @media (max-width: $tablet-width) {
@@ -103,8 +105,8 @@
   @media (max-width: $desktop-width) {
     display: none;
     width: 100%;
-    order: 0;
-    margin-bottom: 42px;
+    order: 6;
+    margin: 32px 0 22px;
 
     & input {
       width: 100%;
@@ -128,22 +130,31 @@
   }
 
   @media (max-width: $tablet-width) {
-    margin-bottom: 35px;
+    margin: 23px 0;
+  }
+}
+
+.header__bottom {
+  width: 49%;
+  margin: 36px auto 0;
+
+  @media (max-width: $desktop-width) {
+    margin: 0;
+    width: 100%;
   }
 }
 .header__nav {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  width: 42%;
-  transform: translateX(-50%);
+  // position: absolute;
+  // bottom: 0;
+  // left: 50%;
+  // transform: translateX(-50%);
 
   @media (max-width: $desktop-width) {
     display: none;
     position: relative;
-    bottom: unset;
-    left: unset;
-    transform: unset;
+    // bottom: unset;
+    // left: unset;
+    // transform: unset;
     width: 100%;
     margin-bottom: 23px;
   }
@@ -164,10 +175,10 @@
 }
 
 .header__user-menu {
-  width: 21.5%;
+  width: 17.5%;
 
   @media (max-width: $desktop-width) {
-    width: 2.5%;
+    width: 4%;
   }
   @media (max-width: $tablet-width) {
     width: 9%;
