--- a/source/sass/blocks/nav-list.scss
+++ b/source/sass/blocks/nav-list.scss
@@ -1,5 +1,6 @@
 .nav-list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   padding-left: 21px;
 
@@ -11,9 +12,10 @@
 
 .nav-list__item {
   padding-right: 10px;
+  margin-bottom: 20px;
 
   @media (max-width: $desktop-width) {
-    margin-bottom: 21px;
+    // margin-bottom: 21px;
     font-family: $poppins;
     font-size: 24px;
     line-height: 36px;
