--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -6,7 +6,7 @@
   &::after {
     content: "";
     position: absolute;
-    top: 65%;
+    top: 113px;
     left: 0;
     width: 100%;
     height: 1px;
@@ -86,12 +86,12 @@
 
   & label {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 1%;
+    left: 1%;
   }
 
   & input {
-    padding-left: 32px;
+    padding-left: 33px;
     border: 0;
     font-family: inherit;
     font-size: 14px;
