--- a/source/sass/blocks/nav-list.scss
+++ b/source/sass/blocks/nav-list.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  padding-left: 21px;
+  padding-left: 13px;
 
   @media (max-width: $desktop-width) {
     padding: 0;
@@ -11,7 +11,7 @@
 }
 
 .nav-list__item {
-  padding-right: 10px;
+  // padding-right: 10px;
   margin-bottom: 20px;
 
   @media (max-width: $desktop-width) {
