--- a/source/sass/blocks/filter.scss
+++ b/source/sass/blocks/filter.scss
@@ -47,8 +47,7 @@
 
 .filter__head-button {
   display: none;
-  padding-top: 25px;
-  padding-right: 19px;
+  padding: 25px 19px 5px;
 }
 
 .filter__button {
